syntax = "proto3";

package Cs;

import "google/protobuf/descriptor.proto";

extend google.protobuf.EnumOptions {
    MsgId cs_msg_id = 10001;
}

enum MsgId {
    MSG_ID_INVALID = 0;
    MSG_ID_GUILD = 1;
    MSG_ID_PACKAGE = 2;
}
